Validation/annulation d'une reservation d'un exemplaire + ajustement de la page accueil du cote frontOffice pour afficher les informations de l'adherent connecte + transformation d'une reservation en pret du cote backOffice+ajout des listes de pret en cours , reservation validee, historique des satuts de chaque mouvement et la liste des adherents penalises dans le backOffice